--- a/sequencePV.html
+++ b/sequencePV.html
@@ -139,7 +139,7 @@
                   </div>
                   <div class="col-8">
                     <div class="d-flex">
-                      <input class="form-check-input border border-dark fs-4 mx-1" name="pressure_value" type="checkbox"
+                      <input class="form-control border border-dark fs-4 mx-1" name="pressure_value" type="text"
                         value="" id="pressure_value">
 
                     </div>
@@ -160,7 +160,7 @@
                 </div>
                 <div class="col-8">
                   <div class="d-flex">
-                    <input class="form-check-input border border-dark fs-4 mx-1" name="pressure_value" type="checkbox" value="" id="pressure_value_1">
+                    <input class="form-control border border-dark fs-4 mx-1" name="pressure_value" type="text" value="" id="pressure_value_1">
                   </div>
                 </div>
               </div>
@@ -170,7 +170,7 @@
                 </div>
                 <div class="col-8">
                   <div class="d-flex">
-                    <input class="form-check-input border border-dark fs-4 mx-1" name="pressure_value" type="checkbox" value="" id="pressure_value_2">
+                    <input class="form-control border border-dark fs-4 mx-1" name="pressure_value" type="text" value="" id="pressure_value_2">
                   </div>
                 </div>
               </div>
@@ -180,7 +180,7 @@
                 </div>
                 <div class="col-8">
                   <div class="d-flex">
-                    <input class="form-check-input border border-dark fs-4 mx-1" name="pressure_value" type="checkbox" value="" id="pressure_value_3">
+                    <input class="form-control border border-dark fs-4 mx-1" name="pressure_value" type="text" value="" id="pressure_value_3">
                   </div>
                 </div>
               </div>
@@ -190,7 +190,7 @@
                 </div>
                 <div class="col-8">
                   <div class="d-flex">
-                    <input class="form-check-input border border-dark fs-4 mx-1" name="pressure_value" type="checkbox" value="" id="pressure_value_4">
+                    <input class="form-control border border-dark fs-4 mx-1" name="pressure_value" type="text" value="" id="pressure_value_4">
                   </div>
                 </div>
               </div>
@@ -200,7 +200,7 @@
                 </div>
                 <div class="col-8">
                   <div class="d-flex">
-                    <input class="form-check-input border border-dark fs-4 mx-1" name="pressure_value" type="checkbox" value="" id="pressure_value_5">
+                    <input class="form-control border border-dark fs-4 mx-1" name="pressure_value" type="text" value="" id="pressure_value_5">
                   </div>
                 </div>
               </div>
@@ -210,7 +210,7 @@
                 </div>
                 <div class="col-8">
                   <div class="d-flex">
-                    <input class="form-check-input border border-dark fs-4 mx-1" name="pressure_value" type="checkbox" value="" id="pressure_value_6">
+                    <input class="form-control border border-dark fs-4 mx-1" name="pressure_value" type="text" value="" id="pressure_value_6">
                   </div>
                 </div>
               </div>
@@ -220,7 +220,7 @@
                 </div>
                 <div class="col-8">
                   <div class="d-flex">
-                    <input class="form-check-input border border-dark fs-4 mx-1" name="pressure_value" type="checkbox" value="" id="pressure_value_7">
+                    <input class="form-control border border-dark fs-4 mx-1" name="pressure_value" type="text" value="" id="pressure_value_7">
                   </div>
                 </div>
               </div>
@@ -230,7 +230,7 @@
                 </div>
                 <div class="col-8">
                   <div class="d-flex">
-                    <input class="form-check-input border border-dark fs-4 mx-1" name="pressure_value" type="checkbox" value="" id="pressure_value_8">
+                    <input class="form-control border border-dark fs-4 mx-1" name="pressure_value" type="text" value="" id="pressure_value_8">
                   </div>
                 </div>
               </div>
@@ -240,7 +240,7 @@
                 </div>
                 <div class="col-8">
                   <div class="d-flex">
-                    <input class="form-check-input border border-dark fs-4 mx-1" name="pressure_value" type="checkbox" value="" id="pressure_value_9">
+                    <input class="form-control border border-dark fs-4 mx-1" name="pressure_value" type="text" value="" id="pressure_value_9">
                   </div>
                 </div>
               </div>
@@ -250,7 +250,7 @@
                 </div>
                 <div class="col-8">
                   <div class="d-flex">
-                    <input class="form-check-input border border-dark fs-4 mx-1" name="pressure_value" type="checkbox" value="" id="pressure_value_10">
+                    <input class="form-control border border-dark fs-4 mx-1" name="pressure_value" type="text" value="" id="pressure_value_10">
                   </div>
                 </div>
               </div>
@@ -269,7 +269,7 @@
                 </div>
                 <div class="col-8">
                   <div class="d-flex">
-                    <input class="form-check-input border border-dark fs-4 mx-1" name="pt1" type="checkbox" value="" id="pt1">
+                    <input class="form-control border border-dark fs-4 mx-1" name="pt1" type="text" value="" id="pt1">
                   </div>
                 </div>
               </div>
@@ -279,7 +279,7 @@
                 </div>
                 <div class="col-8">
                   <div class="d-flex">
-                    <input class="form-check-input border border-dark fs-4 mx-1" name="pt2" type="checkbox" value="" id="pt2">
+                    <input class="form-control border border-dark fs-4 mx-1" name="pt2" type="text" value="" id="pt2">
                   </div>
                 </div>
               </div>
@@ -289,7 +289,7 @@
                 </div>
                 <div class="col-8">
                   <div class="d-flex">
-                    <input class="form-check-input border border-dark fs-4 mx-1" name="pt3" type="checkbox" value="" id="pt3">
+                    <input class="form-control border border-dark fs-4 mx-1" name="pt3" type="text" value="" id="pt3">
                   </div>
                 </div>
               </div>
@@ -299,7 +299,7 @@
                 </div>
                 <div class="col-8">
                   <div class="d-flex">
-                    <input class="form-check-input border border-dark fs-4 mx-1" name="pt4" type="checkbox" value="" id="pt4">
+                    <input class="form-control border border-dark fs-4 mx-1" name="pt4" type="text" value="" id="pt4">
                   </div>
                 </div>
               </div>
@@ -309,7 +309,7 @@
                 </div>
                 <div class="col-8">
                   <div class="d-flex">
-                    <input class="form-check-input border border-dark fs-4 mx-1" name="pt5" type="checkbox" value="" id="pt5">
+                    <input class="form-control border border-dark fs-4 mx-1" name="pt5" type="text" value="" id="pt5">
                   </div>
                 </div>
               </div>
@@ -319,7 +319,7 @@
                 </div>
                 <div class="col-8">
                   <div class="d-flex">
-                    <input class="form-check-input border border-dark fs-4 mx-1" name="pt6" type="checkbox" value="" id="pt6">
+                    <input class="form-control border border-dark fs-4 mx-1" name="pt6" type="text" value="" id="pt6">
                   </div>
                 </div>
               </div>
@@ -329,7 +329,7 @@
                 </div>
                 <div class="col-8">
                   <div class="d-flex">
-                    <input class="form-check-input border border-dark fs-4 mx-1" name="pt7" type="checkbox" value="" id="pt7">
+                    <input class="form-control border border-dark fs-4 mx-1" name="pt7" type="text" value="" id="pt7">
                   </div>
                 </div>
               </div>
@@ -339,7 +339,7 @@
                 </div>
                 <div class="col-8">
                   <div class="d-flex">
-                    <input class="form-check-input border border-dark fs-4 mx-1" name="pt8" type="checkbox" value="" id="pt8">
+                    <input class="form-control border border-dark fs-4 mx-1" name="pt8" type="text" value="" id="pt8">
                   </div>
                 </div>
               </div>
@@ -349,7 +349,7 @@
                 </div>
                 <div class="col-8">
                   <div class="d-flex">
-                    <input class="form-check-input border border-dark fs-4 mx-1" name="pt9" type="checkbox" value="" id="pt9">
+                    <input class="form-control border border-dark fs-4 mx-1" name="pt9" type="text" value="" id="pt9">
                   </div>
                 </div>
               </div>
@@ -359,7 +359,7 @@
                 </div>
                 <div class="col-8">
                   <div class="d-flex">
-                    <input class="form-check-input border border-dark fs-4 mx-1" name="pt10" type="checkbox" value="" id="pt10">
+                    <input class="form-control border border-dark fs-4 mx-1" name="pt10" type="text" value="" id="pt10">
                   </div>
                 </div>
               </div>
@@ -370,7 +370,7 @@
         <div class="btn-group btn-inlne my-5">
           <button type="button" id="btnSave" class="btn bg-blue fw-bold text-white me-4 px-3 rounded-0">Save</button>
           <button type="button" id="btnSend" class="btn bg-blue fw-bold text-white mx-4 px-3 rounded-0">Send</button>
-          <button type="button" class="btn bg-blue fw-bold text-white mx-4 px-3 rounded-0" onclick="window.location.href='index.html'">Back</button>
+          <button type="button" class="btn bg-blue fw-bold text-white mx-4 px-3 rounded-0" onclick="window.location.href='config.html'">Back</button>
       </div>
       </div>
       </div>
